--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
       </style>
       
-    <title>React App</title>
+    <title>Coranavirus App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
